-------------- 6/21/16 ----------------

Working Beta TMySQL3 and TMySQL4 writers
Working Beta TMySQL3 and TMySQL4 banlists
Moved logging to a configurable plugin
Changed ASS_DropClient to use game.KickID
Moved banning/unbanning backend to banlist plugins
Split Alltalk and Gag/Mute plugins
Updated Alltalk/Proxvoice to not use SetGlobals as bad as DarkRP
Converted config files to use von, assmod configs are getting remade
Moved some stuff out of the default config and split it client/server
Removed a couple useless networkvars

-------------- 6/18/16 ----------------

Moved silkicons over to a workshop addon to greatly speed up resource downloads
Fixed newly created temp admin notification from displaying on all clients
Passed rank to the unused RankingChanged plugin call
Cleaned up ass_shared of unneeded code
Added checks on writers/banlists before running any hooks or requires inside of them
Fixed errors related to MySQL plugins even when not using them
Changed Client Tell varible over to net message bools instead of a GlobalBool
Join/Quit messages go through TellPlayers instead of being seperate chat.AddTexts
Switched Join/Quit logging to events
TellPlayers/LogAction functions can take a string instead of a player
Removed debug prints from banlist plugin
Added FullNickLog back into logs

-------------- 6/16/16 ----------------

Fixed writer plugin commands
Fixed writer plugin functions overwriting all other writer plugin's functions
Converted all base commands over to net message
Converted banlist menu over to net messages
Removed IP_OR_ID/Lan/Singleplayer functionality
Move Assmod Notices over to their own removeable plugin
Removed Usermessage Progress Panels
Trimmed down the Assmod Countdown 'libary'
Converted countdowns to net messages
Moved countdowns to a plugin and changed them to use the plugin functions
Player levels aren't loaded until PlayerAuthed has been ran
Assmod tells you when the steam servers are slow, if they are down you get kicked anyways...